@@ -37,3 +37,5 @@ From Erik R. Leo
 
 Richard Holbert
 * Lie and say there are 0 messages if a real-server can't be contacted.
+
+* Fix schema path in perditiondb_ldap_makedb
